# python-template

./: LICENSE.txt  README.md  generate.py
template/: .gitignore  README.md  pyproject.toml  ruff_defaults.toml
